# biorbd

./: CMakeLists.txt
examples/: CMakeLists.txt  cw_test0.cpp  cw_test1.cpp  sagar_ior.bioMod  sagar_ior.lua
include/: ModelReader.h  biorbd.h
include/LuaTest/: all.h
src/: BiorbdModel.cpp  ModelReader.cpp
src/LuaTest/: CMakeLists.txt  luamodel.cc  luatables.cc  rbdl_luamodel_util.cc
